--- a/police-station.html
+++ b/police-station.html
@@ -7,16 +7,28 @@
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/logo.svg">
 	<link rel="stylesheet" href="css/style-3.css">
+    <link rel="stylesheet" href="css/media-3.css">
 	<title>Police Station</title>
 </head>
 <body>
 	<div class="wrapper">
 		<nav class="nav">
             <ul class="navigation">
-                <a href="#!"><li class="navigation__item">Woman</li></a>
-                <a href="#!"><li class="navigation__item">Man</li></a>
+                <a href="#!"><li class="navigation__item">Girl</li></a>
+                <a href="#!"><li class="navigation__item">Boy</li></a>
                 <a href="all-categories.html"><li class="navigation__item">Category</li></a>
             </ul>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#">Girl</a></li>
+                    <li><a class="menu__item" href="#">Boy</a></li>
+                    <li><a class="menu__item" href="#">Category</a></li>
+                </ul>
+            </div>
             <a href="Home.html"><img class="logo" src="img/logo/Lego.png"></a>
             <div class="nav__img_box">
                 <a href="#!"><img class="nav__img" src="img/search.svg"></a>
@@ -77,7 +89,7 @@
                 <a href="#description"><li class="footer__nav-item">Description</li></a>
                 <a href="#ymal"><li class="footer__nav-item">You may also like</li></a>
             </ul>
-            <div class="footer__contacts" id="down">
+            <div class="footer__contacts">
                 <a href="https://www.facebook.com/"><img class="contacts__img" src="img/contacts/facebook.svg"></a>
                 <a href="https://www.instagram.com/"><img class="contacts__img" src="img/contacts/instagram.svg"></a>
                 <a href="https://ru.pinterest.com/"><img class="contacts__img" src="img/contacts/pinterest.svg"></a>
