--- a/vulcan.html
+++ b/vulcan.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/logo.svg">
+    <link rel="stylesheet" href="css/media-3.css">
 	<link rel="stylesheet" href="css/style-3.css">
 	<title>Garmadon's Lair at the Volcano's Vulcan</title>
 </head>
@@ -13,10 +14,21 @@
 	<div class="wrapper">
 		<nav class="nav">
             <ul class="navigation">
-                <a href="#!"><li class="navigation__item">Woman</li></a>
-                <a href="#!"><li class="navigation__item">Man</li></a>
+                <a href="#!"><li class="navigation__item">Girl</li></a>
+                <a href="#!"><li class="navigation__item">Boy</li></a>
                 <a href="all-categories.html"><li class="navigation__item">Category</li></a>
             </ul>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#">Girl</a></li>
+                    <li><a class="menu__item" href="#">Boy</a></li>
+                    <li><a class="menu__item" href="#">Category</a></li>
+                </ul>
+            </div>
             <a href="Home.html"><img class="logo" src="img/logo/Lego.png"></a>
             <div class="nav__img_box">
                 <a href="#!"><img class="nav__img" src="img/search.svg"></a>
@@ -48,25 +60,25 @@
                     <h3 class="ymal__title">You may also like</h3>
                 </div>
                 <div class="ymal__gallery-box">
-                    <div class="ymal__gallery"><a href="tantive-iv.html">
-                        <img class="gallery__img" src="img/star-wars/sw-img-4.png">
-                        <p class="gallery__title">Tantive IV</p>
-                        <p class="gallery__price"><strong>400$</strong></p>
+                    <div class="ymal__gallery"><a href="statue-of-liberty.html">
+                        <img class="gallery__img" src="img/architecture/architecture-img-2.png">
+                        <p class="gallery__title">Statue of Liberty</p>
+                        <p class="gallery__price"><strong>110$</strong></p>
                     </a></div>
-                    <div class="ymal__gallery"><a href="destiny's-bounty.html">
-                        <img class="gallery__img" src="img/ninjago/ninjago-img-5.png">
-                        <p class="gallery__title">Destiny's Bounty</p>
-                        <p class="gallery__price"><strong>250$</strong></p>
+                    <div class="ymal__gallery"><a href="castle-of-the-cursed-emperor.html">
+                        <img class="gallery__img" src="img/ninjago/ninjago-img-12.png">
+                        <p class="gallery__title">Castle of the Cursed Emperor</p>
+                        <p class="gallery__price"><strong>270$</strong></p>
                     </a></div>
-                    <div class="ymal__gallery"><a href="police-station.html">
-                        <img class="gallery__img" src="img/city/city-img-2.png">
-                        <p class="gallery__title">Police Station</p>
-                        <p class="gallery__price"><strong>100$</strong></p>
+                    <div class="ymal__gallery"><a href="ghost-hunters.html">
+                        <img class="gallery__img" src="img/ideas/ideas-img-5.png">
+                        <p class="gallery__title">Ghost Hunters</p>
+                        <p class="gallery__price"><strong>165$</strong></p>
                     </a></div>
-                    <div class="ymal__gallery"><a href="pirates-ride.html">
-                        <img class="gallery__img" src="img/creator/creator-img-10.png">
-                        <p class="gallery__title">Pirates Ride</p>
-                        <p class="gallery__price"><strong>185$</strong></p>
+                    <div class="ymal__gallery"><a href="racing-top-gear-car-on-management.html">
+                        <img class="gallery__img" src="img/technic/technic-img-9.png">
+                        <p class="gallery__title">Racing Top Gear Car on Management</p>
+                        <p class="gallery__price"><strong>140$</strong></p>
                     </a></div>
                 </div>
             </div>
@@ -77,7 +89,7 @@
                 <a href="#description"><li class="footer__nav-item">Description</li></a>
                 <a href="#ymal"><li class="footer__nav-item">You may also like</li></a>
             </ul>
-            <div class="footer__contacts" id="down">
+            <div class="footer__contacts">
                 <a href="https://www.facebook.com/"><img class="contacts__img" src="img/contacts/facebook.svg"></a>
                 <a href="https://www.instagram.com/"><img class="contacts__img" src="img/contacts/instagram.svg"></a>
                 <a href="https://ru.pinterest.com/"><img class="contacts__img" src="img/contacts/pinterest.svg"></a>
