--- a/Home.html
+++ b/Home.html
@@ -59,45 +59,69 @@
                 </div>
                 <div class="popular__gallery_box">
                     <div class="popular__gallery"><a href="daily-bugle-edition.html">
-                        <img class="gallery__img" src="img/popular/popular-img-1.png">
+                        <img class="gallery__img" src="img/popular/popular-img-1.png"></a>
                         <p class="gallery__title">Daily Bugle Edition</p>
                         <p class="gallery__price"><strong>385$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="spinjitzu-temple.html">
-                        <img class="gallery__img" src="img/popular/popular-img-2.png">
+                        <img class="gallery__img" src="img/popular/popular-img-2.png"></a>
                         <p class="gallery__title">Spinjitzu Temple</p>
                         <p class="gallery__price"><strong>150$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="cargo-evacuator.html">
-                        <img class="gallery__img" src="img/popular/popular-img-3.png">
+                        <img class="gallery__img" src="img/popular/popular-img-3.png"></a>
                         <p class="gallery__title">Cargo Evacuator</p>
                         <p class="gallery__price"><strong>155$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="mos-eisley-cantina.html">
-                        <img class="gallery__img" src="img/popular/popular-img-4.png">
+                        <img class="gallery__img" src="img/popular/popular-img-4.png"></a>
                         <p class="gallery__title">Mos Eisley Cantina</p>
                         <p class="gallery__price"><strong>375$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="london-skyline.html">
-                        <img class="gallery__img" src="img/popular/popular-img-5.png">
+                        <img class="gallery__img" src="img/popular/popular-img-5.png"></a>
                         <p class="gallery__title">London Skyline</p>
                         <p class="gallery__price"><strong>40$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="globe.html">
-                        <img class="gallery__img" src="img/popular/popular-img-6.png">
+                        <img class="gallery__img" src="img/popular/popular-img-6.png"></a>
                         <p class="gallery__title">Globe</p>
                         <p class="gallery__price"><strong>250$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="statue-of-liberty.html">
-                        <img class="gallery__img" src="img/popular/popular-img-7.png">
+                        <img class="gallery__img" src="img/popular/popular-img-7.png"></a>
                         <p class="gallery__title">Statue of Liberty</p>
                         <p class="gallery__price"><strong>120$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                     <div class="popular__gallery"><a href="beacon.html">
-                        <img class="gallery__img" src="img/popular/popular-img-8.png">
+                        <img class="gallery__img" src="img/popular/popular-img-8.png"></a>
                         <p class="gallery__title">Beacon</p>
                         <p class="gallery__price"><strong>150$</strong></p>
-                    </a></div>
+                        <div class="gallery__button">
+                            <button class="add__to__cart">Add to cart</button>  
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="News" id="news">
