--- a/architecture.html
+++ b/architecture.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="65"><a href="new-york.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-1.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-1.png"></a>
                     <p class="gallery__title">New York</p>
                     <p class="gallery__price"><strong>65$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="110"><a href="statue-of-liberty.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-2.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-2.png"></a>
                     <p class="gallery__title">Statue of Liberty</p>
                     <p class="gallery__price"><strong>110$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="60"><a href="dubai.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-3.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-3.png"></a>
                     <p class="gallery__title">Dubai</p>
                     <p class="gallery__price"><strong>60$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="150"><a href="empire-state-bilding.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-4.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-4.png"></a>
                     <p class="gallery__title">Empire State Building</p>
                     <p class="gallery__price"><strong>150$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="110"><a href="small-white-house.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-5.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-5.png"></a>
                     <p class="gallery__title">Small White House</p>
                     <p class="gallery__price"><strong>110$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="great-white-house.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-6.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-6.png"></a>
                     <p class="gallery__title">Great White House</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="great-pyramid-of-giza.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-7.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-7.png"></a>
                     <p class="gallery__title">Great Pyramid of Giza</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="60"><a href="singapore.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-8.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-8.png"></a>
                     <p class="gallery__title">Singapore</p>
                     <p class="gallery__price"><strong>60$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="50"><a href="paris.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-9.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-9.png"></a>
                     <p class="gallery__title">Paris</p>
                     <p class="gallery__price"><strong>50$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="70"><a href="tokyo.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-10.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-10.png"></a>
                     <p class="gallery__title">Tokyo</p>
                     <p class="gallery__price"><strong>70$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="shanghai.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-11.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-11.png"></a>
                     <p class="gallery__title">Shanghai</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="40"><a href="london-skyline.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-12.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-12.png"></a>
                     <p class="gallery__title">London Skyline</p>
                     <p class="gallery__price"><strong>40$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="120"><a href="taj-mahal.html">
-                    <img class="gallery__img" src="img/architecture/architecture-img-13.png">
+                    <img class="gallery__img" src="img/architecture/architecture-img-13.png"></a>
                     <p class="gallery__title">Taj Mahal</p>
                     <p class="gallery__price"><strong>120$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
