--- a/city.html
+++ b/city.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="75"><a href="police-patrol-boat.html">
-                    <img class="gallery__img" src="img/city/city-img-1.png">
+                    <img class="gallery__img" src="img/city/city-img-1.png"></a>
                     <p class="gallery__title">Police Patrol Boat</p>
                     <p class="gallery__price"><strong>75$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="100"><a href="police-station.html">
-                    <img class="gallery__img" src="img/city/city-img-2.png">
+                    <img class="gallery__img" src="img/city/city-img-2.png"></a>
                     <p class="gallery__title">Police Station</p>
                     <p class="gallery__price"><strong>100$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="125"><a href="passenger-airplane.html">
-                    <img class="gallery__img" src="img/city/city-img-3.png">
+                    <img class="gallery__img" src="img/city/city-img-3.png"></a>
                     <p class="gallery__title">Passenger Airplane</p>
                     <p class="gallery__price"><strong>125$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="175"><a href="city-hospital.html">
-                    <img class="gallery__img" src="img/city/city-img-4.png">
+                    <img class="gallery__img" src="img/city/city-img-4.png"></a>
                     <p class="gallery__title">City Hospital</p>
                     <p class="gallery__price"><strong>175$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="110"><a href="city-downtown.html">
-                    <img class="gallery__img" src="img/city/city-img-5.png">
+                    <img class="gallery__img" src="img/city/city-img-5.png"></a>
                     <p class="gallery__title">City Downtown</p>
                     <p class="gallery__price"><strong>110$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="100"><a href="fire-brigade.html">
-                    <img class="gallery__img" src="img/city/city-img-6.png">
+                    <img class="gallery__img" src="img/city/city-img-6.png"></a>
                     <p class="gallery__title">Fire Brigade</p>
                     <p class="gallery__price"><strong>100$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="70"><a href="fire-station.html">
-                    <img class="gallery__img" src="img/city/city-img-7.png">
+                    <img class="gallery__img" src="img/city/city-img-7.png"></a>
                     <p class="gallery__title">Fire Station</p>
                     <p class="gallery__price"><strong>70$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="180"><a href="arctic-base.html">
-                    <img class="gallery__img" src="img/city/city-img-8.png">
+                    <img class="gallery__img" src="img/city/city-img-8.png"></a>
                     <p class="gallery__title">Arctic Base</p>
                     <p class="gallery__price"><strong>180$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="65"><a href="maintenance-shuttle.html">
-                    <img class="gallery__img" src="img/city/city-img-9.png">
+                    <img class="gallery__img" src="img/city/city-img-9.png"></a>
                     <p class="gallery__title">Maintenance Shuttle</p>
                     <p class="gallery__price"><strong>65$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="55"><a href="deep-sea-submarine.html">
-                    <img class="gallery__img" src="img/city/city-img-10.png">
+                    <img class="gallery__img" src="img/city/city-img-10.png"></a>
                     <p class="gallery__title">Deep Sea Submarine</p>
                     <p class="gallery__price"><strong>55$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="35"><a href="garbage-truck.html">
-                    <img class="gallery__img" src="img/city/city-img-11.png">
+                    <img class="gallery__img" src="img/city/city-img-11.png"></a>
                     <p class="gallery__title">Garbage Truck</p>
                     <p class="gallery__price"><strong>35$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="150"><a href="secret-thief-hideout.html">
-                    <img class="gallery__img" src="img/city/city-img-12.png">
+                    <img class="gallery__img" src="img/city/city-img-12.png"></a>
                     <p class="gallery__title">Secret Thief Hideout</p>
                     <p class="gallery__price"><strong>150$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="55"><a href="cargo-tiltrotor.html">
-                    <img class="gallery__img" src="img/city/city-img-13.png">
+                    <img class="gallery__img" src="img/city/city-img-13.png"></a>
                     <p class="gallery__title">Cargo Tiltrotor</p>
                     <p class="gallery__price"><strong>55$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
