--- a/creator.html
+++ b/creator.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="220"><a href="bookstore.html">
-                    <img class="gallery__img" src="img/creator/creator-img-1.png">
+                    <img class="gallery__img" src="img/creator/creator-img-1.png"></a>
                     <p class="gallery__title">Bookstore</p>
                     <p class="gallery__price"><strong>220$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="255"><a href="winter-holiday-train.html">
-                    <img class="gallery__img" src="img/creator/creator-img-2.png">
+                    <img class="gallery__img" src="img/creator/creator-img-2.png"></a>
                     <p class="gallery__title">Winter Holiday Train</p>
                     <p class="gallery__price"><strong>255$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="110"><a href="holiday-main-street.html">
-                    <img class="gallery__img" src="img/creator/creator-img-3.png">
+                    <img class="gallery__img" src="img/creator/creator-img-3.png"></a>
                     <p class="gallery__title">Holiday Main Street</p>
                     <p class="gallery__price"><strong>110$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="140"><a href="pirate-ship.html">
-                    <img class="gallery__img" src="img/creator/creator-img-4.png">
+                    <img class="gallery__img" src="img/creator/creator-img-4.png"></a>
                     <p class="gallery__title">Pirate Ship</p>
                     <p class="gallery__price"><strong>140$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="305"><a href="city-street.html">
-                    <img class="gallery__img" src="img/creator/creator-img-5.png">
+                    <img class="gallery__img" src="img/creator/creator-img-5.png"></a>
                     <p class="gallery__title">City Street</p>
                     <p class="gallery__price"><strong>305$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="110"><a href="waiting-for-santa.html">
-                    <img class="gallery__img" src="img/creator/creator-img-6.png">
+                    <img class="gallery__img" src="img/creator/creator-img-6.png"></a>
                     <p class="gallery__title">Waiting for Santa</p>
                     <p class="gallery__price"><strong>110$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="215"><a href="crocodile-locomotive.html">
-                    <img class="gallery__img" src="img/creator/creator-img-7.png">
+                    <img class="gallery__img" src="img/creator/creator-img-7.png"></a>
                     <p class="gallery__title">Crocodile Locomotive</p>
                     <p class="gallery__price"><strong>215$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="575"><a href="bank.html">
-                    <img class="gallery__img" src="img/creator/creator-img-8.png">
+                    <img class="gallery__img" src="img/creator/creator-img-8.png"></a>
                     <p class="gallery__title">Bank</p>
                     <p class="gallery__price"><strong>575$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="270"><a href="corner-garage.html">
-                    <img class="gallery__img" src="img/creator/creator-img-9.png">
+                    <img class="gallery__img" src="img/creator/creator-img-9.png"></a>
                     <p class="gallery__title">Corner Garage</p>
                     <p class="gallery__price"><strong>270$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="185"><a href="pirates-ride.html">
-                    <img class="gallery__img" src="img/creator/creator-img-10.png">
+                    <img class="gallery__img" src="img/creator/creator-img-10.png"></a>
                     <p class="gallery__title">Pirates Ride</p>
                     <p class="gallery__price"><strong>185$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="440"><a href="big-ben.html">
-                    <img class="gallery__img" src="img/creator/creator-img-11.png">
+                    <img class="gallery__img" src="img/creator/creator-img-11.png"></a>
                     <p class="gallery__title">Big Ben</p>
                     <p class="gallery__price"><strong>440$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="150"><a href="beacon.html">
-                    <img class="gallery__img" src="img/creator/creator-img-12.png">
+                    <img class="gallery__img" src="img/creator/creator-img-12.png"></a>
                     <p class="gallery__title">Beacon</p>
                     <p class="gallery__price"><strong>150$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="330"><a href="stadium.html">
-                    <img class="gallery__img" src="img/creator/creator-img-13.png">
+                    <img class="gallery__img" src="img/creator/creator-img-13.png"></a>
                     <p class="gallery__title">Manchester United Stadium</p>
                     <p class="gallery__price"><strong>330$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
